# dagger-mcp-server

./: .dockerignore  .gitignore  CODE_QUALITY.md  Dockerfile  NETWORK_RESILIENCE.md  README.md  dagger.json  demo_building_stage.py  pyproject.toml  test_building_implementation.py  test_infrastructure_validation.json  validate_acceptance_criteria.py  validate_testing_infrastructure.py
.github/: copilot-instructions.md
src/: main.py
src/dagger_mcp_server/: __init__.py  building.py  dagger.json  pipeline.py  pyproject.toml  requirements.txt  simple_pipeline.py  testing.py
src/demo_mcp_app/: .env.example  README.md  openai_mcp_demo.py  pyproject.toml  run_tests.py
src/demo_mcp_app/tests/: README.md  __init__.py  fixtures.py  test_core.py  test_integration.py  test_mcp_client.py  test_performance.py
