[tool.poetry]
name = "dagger-mcp-server"
version = "0.1.0"
description = "Dagger MCP server project."
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dagger = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
